VariantRecord versioning and delete
git-svn-id: svn+ssh://dev.outerthought.org/outerthought/lilyproject/projects/lily/trunk@3918 b80d95f8-e103-0410-bd55-e03a9dc29394